fix(battle): ajusta a margem do log de chat e aumenta o tamanho da fonte para melhor legibilidade

--- a/src/app/features/game/battle/battle.component.scss
+++ b/src/app/features/game/battle/battle.component.scss
@@ -411,7 +411,7 @@
     flex-grow: 1;
     overflow-y: auto;
     padding: 15px;
-    font-size: 14px;
+    font-size: 16px;
 
     &::-webkit-scrollbar {
       width: 8px;
@@ -485,6 +485,7 @@
     background: rgba(10, 10, 46, 1);
     border-radius: 15px;
     border: 1px solid rgba(138, 43, 226, 0.4);
+    margin-bottom: 1%;
 }
 
 .action-btn {
